Bioinformatic lec-1.txt
Microsoft Windows [Version 10.0.26200.6899]
(c) Microsoft Corporation. All rights reserved.

C:\Users\DCSUser> cd ./csc209s3\
The system cannot find the path specified.

C:\Users\DCSUser> cd ./csc209s3
The system cannot find the path specified.

C:\Users\DCSUser>C:\Users\DCSUser\Desktop\csc209s3
'C:\Users\DCSUser\Desktop\csc209s3' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\DCSUser>cd C:\Users\DCSUser\Desktop\csc209s3

C:\Users\DCSUser\Desktop\csc209s3>my_env\Scripts\active
'my_env\Scripts\active' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\DCSUser\Desktop\csc209s3>my_env\scripts\active
'my_env\scripts\active' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\DCSUser\Desktop\csc209s3>my_env\Scripts\activate

(my_env) C:\Users\DCSUser\Desktop\csc209s3>python
Python 3.12.5 (tags/v3.12.5:ff3bc82, Aug  6 2024, 20:45:27) [MSC v.1940 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 4+4
8
>>> 10-6
4
>>> 10*3
30
>>> 10/3
3.3333333333333335
>>> 10//3
3
>>> 20%6
2
>>> 2**4
16
>>> 9**0.5
3.0
>>> 9**1/2
4.5
>>> 9**(1/2)
3.0
>>> (4**3)+3
67
>>> 2**100
1267650600228229401496703205376
>>> 2 ** 100
1267650600228229401496703205376
>>> 0.1
0.1
>>> 0.1+ 0.3
0.4
>>> 0.01+0.032
0.042
>>> -2.5 + +3.5
1.0
>>> 0.1 + 0.2
0.30000000000000004
>>> 0.1 + 0.2
0.30000000000000004
>>> format(0.1,".20f")
'0.10000000000000000555'
>>> format(0.2,".20f")
'0.20000000000000001110'
>>> math
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'math' is not defined. Did you forget to import 'math'?
>>> import math
>>> math.sqrt(16)
4.0
>>> math.factorial(5)
120
>>> math.gcd(36,56)
4
>>> math.pi
3.141592653589793
>>> math.sort(1,4,3)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'math' has no attribute 'sort'. Did you mean: 'sqrt'?
>>> math.inf
inf
>>> math/sin(math.pi/2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'sin' is not defined. Did you mean: 'bin'?
>>> math.sin(math.pi/2)
1.0
>>> 28/4
7.0
>>> 37%2
1
>>> 999%10
9
>>> num==37
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'num' is not defined. Did you mean: 'sum'?
>>> 6 ** 3
216
>>> (11 ** 2)*6
726
>>> 8 ** 3
512
>>> (8**2)*2
128
>>> (8**2)*6
384
>>> 0.5*3*4
6.0
>>> (12*9)*1/2
54.0
>>> 2*math.pi*7
43.982297150257104
>>> 2*math.pi*3
18.84955592153876
>>> math.pi*(3**2)
28.274333882308138
>>> print(even)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'even' is not defined
>>> print("even")
even
>>> print ("even" if 37%2==00 else "odd")
odd
>>> math.log(100,10)
2.0
>>> z=3+4i
  File "<stdin>", line 1
    z=3+4i
        ^
SyntaxError: invalid decimal literal
>>> z1=3+4j
>>> z2=1-2j
>>> z1+z2
(4+2j)
>>> z1.real
3.0
>>> z1.imag
4.0
>>> abs(-1)
1
>>> cmath.sqrt(-1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'cmath' is not defined. Did you mean: 'math'? Or did you forget to import 'cmath'?
>>> import cmath
>>> cmath.sqrt(-1)
1j
>>> math.exp(1)
2.718281828459045
>>> type(1j)
<class 'complex'>
>>> cmath.exp(1j*cmath.pi)
(-1+1.2246467991473532e-16j)
>>> Decimal('0.1')+Decimal('0.2')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'Decimal' is not defined
>>> import decimal
>>>  Decimal('0.1')+Decimal('0.2')
  File "<stdin>", line 1
    Decimal('0.1')+Decimal('0.2')
IndentationError: unexpected indent
>>> from decimal import Decimal
>>> Decimal('0.1')+Decimal('0.2')
Decimal('0.3')
>>>
